--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -25,8 +25,5 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
   
-      - name: Authenticate Firebase
-        run: firebase login:ci --token "$FIREBASE_TOKEN"
-  
       - name: Deploy to Firebase Hosting
-        run: firebase deploy --only hosting
+        run: firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
