--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -19,11 +19,13 @@ jobs:
       - name: Install dependencies
         run: npm install
   
-      - name: Build React app
+      - name: Build dependencies
         run: npm run build
   
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
   
       - name: Deploy to Firebase Hosting
-        run: firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
+        run: firebase deploy --only hosting
+        env: 
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
